# lidar

./: README.md  app.py  config.yaml  pyproject.toml  replit.md
attached_assets/: Pasted-A-continuaci-n-tienes-todo-el-rbol-de-archivos-carpeta-lidar-velez-listo-para-comprimir-con-bas-1761751805351_1761751805352.txt
pipelines/: laz2dem.json
src/: detect.py  download.py  process.py
